--- a/src/Aktabook.Data/Aktabook.Data.csproj
+++ b/src/Aktabook.Data/Aktabook.Data.csproj
@@ -8,11 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Migrations" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Aktabook.Domain\Aktabook.Domain.csproj" />
   </ItemGroup>
 
 </Project>
