--- a/src/Aktabook.PublicApi.V1/Aktabook.PublicApi.V1.csproj
+++ b/src/Aktabook.PublicApi.V1/Aktabook.PublicApi.V1.csproj
@@ -10,8 +10,10 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.1"/>
     <PackageReference Include="MediatR" Version="10.0.1"/>
+    <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="5.7.0"/>
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.6"/>
     <PackageReference Include="Serilog" Version="2.11.0"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1"/>
   </ItemGroup>
 
 </Project>
