--- a/src/Aktabook.PublicApi.V1/Aktabook.PublicApi.V1.csproj
+++ b/src/Aktabook.PublicApi.V1/Aktabook.PublicApi.V1.csproj
@@ -10,10 +10,20 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.1"/>
     <PackageReference Include="MediatR" Version="10.0.1"/>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1"/>
     <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="5.7.0"/>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.4"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0"/>
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.6"/>
     <PackageReference Include="Serilog" Version="2.11.0"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Aktabook.Application\Aktabook.Application.csproj"/>
+    <ProjectReference Include="..\Aktabook.Services.BookInfoRequestService\Aktabook.Services.BookInfoRequestService.csproj"/>
   </ItemGroup>
 
 </Project>
