--- a/test/Aktabook.PublicApi.V1.IntegrationTest/Aktabook.PublicApi.V1.IntegrationTest.csproj
+++ b/test/Aktabook.PublicApi.V1.IntegrationTest/Aktabook.PublicApi.V1.IntegrationTest.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.7.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.6"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0"/>
     <PackageReference Include="xunit" Version="2.4.1"/>
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
@@ -22,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Aktabook.PublicApi.V1\Aktabook.PublicApi.V1.csproj"/>
+    <ProjectReference Include="..\Aktabook.Data.IntegrationTest.Common\Aktabook.Data.IntegrationTest.Common.csproj"/>
   </ItemGroup>
 
 </Project>
