feat: Update application layer

--- a/src/Aktabook.Application/Aktabook.Application.csproj
+++ b/src/Aktabook.Application/Aktabook.Application.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Aktabook.Domain\Aktabook.Domain.csproj"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Messages"/>
+  </ItemGroup>
+
 </Project>
