--- a/src/Aktabook.PublicApi.V1/appsettings.json
+++ b/src/Aktabook.PublicApi.V1/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RequesterServiceDbContext": {
+    "SqlServerConfig": {
+      "InitialCatalog": "Aktabook-PublicApi-V1"
+    }
+  }
 }
