--- a/test/Aktabook.Data.IntegrationTest/Aktabook.Data.IntegrationTest.csproj
+++ b/test/Aktabook.Data.IntegrationTest/Aktabook.Data.IntegrationTest.csproj
@@ -36,7 +36,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="appsettings.Development.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
