--- a/test/Aktabook.PublicApi.V1.IntegrationTest/Aktabook.PublicApi.V1.IntegrationTest.csproj
+++ b/test/Aktabook.PublicApi.V1.IntegrationTest/Aktabook.PublicApi.V1.IntegrationTest.csproj
@@ -27,4 +27,16 @@
     <ProjectReference Include="..\Aktabook.Data.IntegrationTest.Common\Aktabook.Data.IntegrationTest.Common.csproj"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.Test.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
