ci: Add Windows build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Ubuntu build
+name: Build
 
 on:
   pull_request:
@@ -9,27 +9,32 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - windows-latest
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Setup .NET
+      - name: Set up .NET SDK
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: 6.x.x
 
-      - name: Restore
+      - name: Restores dependencies
         run: dotnet restore
 
-      - name: Build
+      - name: Build release
         run: >-
           dotnet build
           --no-restore
           --configuration Release
 
-      - name: Test
+      - name: Run unit tests
         run: >-
           dotnet test
           --no-build
