--- a/.github/workflows/sonarcloud-scan.yml
+++ b/.github/workflows/sonarcloud-scan.yml
@@ -3,8 +3,11 @@ name: SonarCloud scan
 on:
   pull_request:
   push:
+    branches:
+      - main
   schedule:
     - cron: 17 21 * * 5
+  workflow_dispatch:
 
 jobs:
   build:
@@ -14,14 +17,16 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Set up JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           java-version: 17
           distribution: microsoft
 
-      - name: Install SonarCloud scanner
-        run: dotnet tool install --global dotnet-sonarscanner
+      - name: Install tools
+        run: |-
+          dotnet tool install --global dotnet-coverage
+          dotnet tool install --global dotnet-sonarscanner
 
       - name: Check out repository
         uses: actions/checkout@v3
@@ -40,10 +45,19 @@ jobs:
           dotnet sonarscanner begin `
           /k:oboukli_aktabook `
           /o:oboukli `
-          /d:sonar.login=${{ secrets.SONAR_TOKEN }} `
-          /d:sonar.host.url="https://sonarcloud.io"
+          /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml `
+          /d:sonar.host.url="https://sonarcloud.io" `
+          /d:sonar.login=${{ secrets.SONAR_TOKEN }}
           dotnet build ./Aktabook.sln `
           `--configuration Release `
+          `--no-incremental `
           `--no-restore
+          dotnet coverage collect `
+          `--output-format xml `
+          `--output coverage.xml `
+          dotnet test `
+          `--no-build `
+          `--configuration Release `
+          `--filter FullyQualifiedName\!~IntegrationTest
           dotnet sonarscanner end `
           /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
