ci: Improve CI configuration

--- a/.github/workflows/code-style-check.yml
+++ b/.github/workflows/code-style-check.yml
@@ -2,6 +2,8 @@ name: Code style check
 
 on:
   pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
@@ -10,6 +12,8 @@ jobs:
   build:
     name: Check .NET projects
     runs-on: ubuntu-latest
+    env:
+      DOTNET_CLI_TELEMETRY_OPTOUT: true
 
     steps:
       - name: Check out repository
@@ -23,5 +27,5 @@ jobs:
       - name: Run dotnet format
         run: >-
           dotnet format
-          --verify-no-changes
           --verbosity quiet
+          --verify-no-changes
