feat: Add structured logger

--- a/src/Aktabook.PublicApi.V1/appsettings.Example.json
+++ b/src/Aktabook.PublicApi.V1/appsettings.Example.json
@@ -1,5 +1,9 @@
 {
   "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -7,10 +11,31 @@
         "System": "Warning"
       }
     },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {SourceContext} [{Level}] {Message}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/aktabook-api-.log",
+          "formatter": {
+            "type": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+          },
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": true
+        }
+      }
+    ],
     "Enrich": [
       "FromLogContext",
       "WithMachineName",
-      "WithThreadId"
+      "WithThreadId",
+      "WithExceptionDetails"
     ],
     "Destructure": [
       {
