--- a/src/Aktabook.PublicApi.V1/Aktabook.PublicApi.V1.csproj
+++ b/src/Aktabook.PublicApi.V1/Aktabook.PublicApi.V1.csproj
@@ -17,7 +17,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0"/>
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.7"/>
-    <PackageReference Include="Serilog" Version="2.11.0"/>
+    <PackageReference Include="Serilog.AspNetCore" Version="6.0.1"/>
+    <PackageReference Include="Serilog.Exceptions" Version="8.3.0"/>
+    <PackageReference Include="Serilog.Exceptions.EntityFrameworkCore" Version="8.3.0"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.2"/>
   </ItemGroup>
 
