--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,12 @@ trim_trailing_whitespace = true
 [*.{csproj,config,props,yml}]
 insert_final_newline = true
 
+[Dockerfile]
+charset = utf-8
+end_of_line = lf
+indent_size = 2
+indent_style = space
+
 [*.cs]
 charset = utf-8
 end_of_line = lf
