--- a/src/Aktabook.Bus.Common/Aktabook.Bus.Common.csproj
+++ b/src/Aktabook.Bus.Common/Aktabook.Bus.Common.csproj
@@ -7,16 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="10.0.1"/>
     <PackageReference Include="NServiceBus" Version="7.7.4"/>
+    <PackageReference Include="NServiceBus.Json" Version="2.0.0"/>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Aktabook.Domain\Aktabook.Domain.csproj"/>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Messages"/>
+    <ProjectReference Include="..\Aktabook.Application\Aktabook.Application.csproj"/>
   </ItemGroup>
 
 </Project>
