--- a/src/Aktabook.Bus/Aktabook.Bus.csproj
+++ b/src/Aktabook.Bus/Aktabook.Bus.csproj
@@ -1,56 +1,55 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.2"/>
-    <PackageReference Include="MediatR" Version="10.0.1"/>
-    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1"/>
-    <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="5.7.0"/>
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0"/>
-    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.7"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1"/>
     <PackageReference Include="NServiceBus" Version="7.7.4"/>
-    <PackageReference Include="NServiceBus.Extensions.DependencyInjection" Version="1.0.1"/>
     <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.1.0"/>
     <PackageReference Include="NServiceBus.Json" Version="2.0.0"/>
+    <PackageReference Include="NServiceBus.Metrics.PerformanceCounters" Version="4.0.0"/>
     <PackageReference Include="NServiceBus.RabbitMQ" Version="7.0.0"/>
+    <PackageReference Include="NServiceBus.Router" Version="3.10.1"/>
+    <PackageReference Include="NServiceBus.Serilog" Version="8.1.0"/>
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0"/>
-    <PackageReference Include="Serilog.AspNetCore" Version="6.0.1"/>
+    <PackageReference Include="Serilog" Version="2.11.0"/>
     <PackageReference Include="Serilog.Exceptions" Version="8.3.0"/>
     <PackageReference Include="Serilog.Exceptions.EntityFrameworkCore" Version="8.3.0"/>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1"/>
+    <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0"/>
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0"/>
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1"/>
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0"/>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Aktabook.Application\Aktabook.Application.csproj"/>
+    <ProjectReference Include="..\Aktabook.Bus.Common\Aktabook.Bus.Common.csproj"/>
+    <ProjectReference Include="..\Aktabook.Connectors.OpenLibrary\Aktabook.Connectors.OpenLibrary.csproj"/>
+    <ProjectReference Include="..\Aktabook.Data\Aktabook.Data.csproj"/>
     <ProjectReference Include="..\Aktabook.Infrastructure.Configuration\Aktabook.Infrastructure.Configuration.csproj"/>
     <ProjectReference Include="..\Aktabook.Services.BookInfoRequestService\Aktabook.Services.BookInfoRequestService.csproj"/>
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="appsettings.Test.json">
+    <None Update="appsettings.Development.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="appsettings.Development.json">
+    <None Update="appsettings.Test.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="Program.Partial.cs">
-      <DependentUpon>Program.cs</DependentUpon>
-    </Compile>
   </ItemGroup>
 
 </Project>
