--- a/.github/workflows/sonarcloud-scan.yml
+++ b/.github/workflows/sonarcloud-scan.yml
@@ -37,7 +37,7 @@ jobs:
           restore-keys: ${{ runner.os }}-nuget-
 
       - name: Restores dependencies
-        run: dotnet restore
+        run: dotnet restore --locked-mode
 
       - name: Build and analyze
         env:
