--- a/.editorconfig
+++ b/.editorconfig
@@ -1,16 +1,21 @@
 # Adapted from https://github.com/jasontaylordev/CleanArchitecture/blob/main/.editorconfig
 root = true
 
-[*.{csproj,config,json,props,yml}]
+[*.{csproj,{C,c}onfig,json,props,yml}]
 charset = utf-8
 end_of_line = lf
 indent_size = 2
 indent_style = space
+max_line_length = off
 
 trim_trailing_whitespace = true
 
-[*.{csproj,config,props,yml}]
+[*.{csproj,{C,c}onfig,props,yml}]
 insert_final_newline = true
+
+[*.{csproj,{C, c}onfig, props}]
+xml_space_after_last_attribute = false
+xml_space_after_last_pi_attribute = false
 
 [Dockerfile]
 charset = utf-8
