ci: Fix file paths in Dockerfile

--- a/src/Aktabook.PublicApi.V1/Dockerfile
+++ b/src/Aktabook.PublicApi.V1/Dockerfile
@@ -5,16 +5,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["src/Aktabook.PublicApi/Aktabook.PublicApi.csproj", "Aktabook.PublicApi/"]
-RUN dotnet restore "src/Aktabook.PublicApi/Aktabook.PublicApi.csproj"
+COPY ["src/Aktabook.PublicApi.V1/Aktabook.PublicApi.V1.csproj", "Aktabook.PublicApi.V1/"]
+RUN dotnet restore --locked-mode "src/Aktabook.PublicApi.V1/Aktabook.PublicApi.V1.csproj"
 COPY . .
-WORKDIR "/src/Aktabook.PublicApi"
-RUN dotnet build "Aktabook.PublicApi.csproj" -c Release -o /app/build
+WORKDIR "/src/Aktabook.PublicApi.V1"
+RUN dotnet build "Aktabook.PublicApi.V1.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Aktabook.PublicApi.csproj" -c Release -o /app/publish
+RUN dotnet publish "Aktabook.PublicApi.V1.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Aktabook.PublicApi.dll"]
+ENTRYPOINT ["dotnet", "Aktabook.PublicApi.V1.dll"]
