--- a/.github/workflows/code-style-check.yml
+++ b/.github/workflows/code-style-check.yml
@@ -4,25 +4,29 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - "src/**"
+      - "test/**"
   push:
     branches:
       - main
+    paths:
+      - "src/**"
+      - "test/**"
 
 jobs:
   build:
-    name: Check .NET projects
+    name: Check .NET solution code style
     runs-on: ubuntu-latest
-    env:
-      DOTNET_CLI_TELEMETRY_OPTOUT: true
 
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
-
-      - name: Setup .NET
+      - name: Set up .NET SDK
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: 6.x.x
+
+      - name: Check out repository
+        uses: actions/checkout@v3
 
       - name: Run dotnet format
         run: >-
