--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -19,48 +19,19 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: true
-    outputs:
-      short-commit-sha: ${{ steps.get-short-commit-sha.outputs.short-commit-sha }}
 
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Restore
-        uses: ./.github/workflows/composite/restore
+      - name: Build release
+        uses: ./.github/workflows/composite/dotnet-build
         with:
           configuration: Release
-
-      - name: Build solution
-        shell: bash
-        run: >-
-          dotnet build
-          --configuration Release
-          --no-incremental
-          --no-restore
-          --no-self-contained
-
-      - name: Archive build artifacts
-        run: |-
-          7z a -bb0 -bd -m0=lzma2 -mx=3 -xr!*.cs aktabook-build.7z src/
-          7z a -bb0 -bd -m0=lzma2 -mx=3 -xr!*.cs aktabook-build.7z test/
-          7z a -bb0 -bd -m0=lzma2 -mx=3 -xr!*.cs aktabook-build.7z Aktabook.sln
-
-      - name: Get short commit SHA
-        id: get-short-commit-sha
-        run: echo "::set-output name=short-commit-sha::$(git rev-parse --short "$GITHUB_SHA")"
-
-      - name: Upload build artifacts archive
-        uses: actions/upload-artifact@v3
-        continue-on-error: false
-        with:
-          name: aktabook-build-${{ steps.get-short-commit-sha.outputs.short-commit-sha }}
-          path: aktabook-build.7z
 
   integration_test:
     name: Integration test
     runs-on: ubuntu-latest
-    needs: build
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: true
       RequesterServiceBus__RabbitMQConnectionOptions__HostName: localhost
@@ -114,18 +85,10 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Restore
-        uses: ./.github/workflows/composite/restore
+      - name: Build release
+        uses: ./.github/workflows/composite/dotnet-build
         with:
           configuration: Release
-
-      - name: Download build artifacts archive
-        uses: actions/download-artifact@v3
-        with:
-          name: aktabook-build-${{ needs.build.outputs.short-commit-sha }}
-
-      - name: Extract build artifacts archive
-        run: 7z x -y aktabook-build.7z
 
       - name: Restore .NET tools
         run: dotnet tool restore
@@ -225,7 +188,6 @@ jobs:
   unit_test:
     name: Unit test
     runs-on: ubuntu-latest
-    needs: build
     outputs:
       artifact_name: ${{ steps.get_artifact_name.outputs.artifact_name }}
 
@@ -233,18 +195,10 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Restore
-        uses: ./.github/workflows/composite/restore
+      - name: Build release
+        uses: ./.github/workflows/composite/dotnet-build
         with:
           configuration: Release
-
-      - name: Download build artifacts archive
-        uses: actions/download-artifact@v3
-        with:
-          name: aktabook-build-${{ needs.build.outputs.short-commit-sha }}
-
-      - name: Extract build artifacts archive
-        run: 7z x -y aktabook-build.7z
 
       - name: Run unit tests
         run: >-
@@ -259,10 +213,7 @@ jobs:
           --test-adapter-path .
 
       - name: Archive test coverage results
-        run: |-
-          7z a -bb0 -bd -m0=lzma2 -mx=3 ${{ env.UNIT_TEST_RESULTS_DIR_NAME }}.7z ${{ env.UNIT_TEST_RESULTS_DIR_NAME }}
-
-      - run: 7z l ${{ env.UNIT_TEST_RESULTS_DIR_NAME }}.7z
+        run: 7z a -bb0 -bd -m0=lzma2 -mx=3 ${{ env.UNIT_TEST_RESULTS_DIR_NAME }}.7z ${{ env.UNIT_TEST_RESULTS_DIR_NAME }}
 
       - name: Get artifact name
         id: get_artifact_name
@@ -335,7 +286,7 @@ jobs:
           /d:"sonar.host.url=https://sonarcloud.io"
           /d:"sonar.sourceEncoding=UTF-8"
           /d:"sonar.login=${{ secrets.SONAR_TOKEN }}"
-          /d:"sonar.cs.opencover.reportsPaths=**/coverage.opencover.xml"
+          /d:"sonar.cs.opencover.reportsPaths=${{ env.UNIT_TEST_RESULTS_DIR_NAME }}/**/coverage.opencover.xml,${{ env.INTEGRATION_TEST_RESULTS_DIR_NAME }}/**/coverage.opencover.xml"
 
           dotnet build
           --no-incremental
